terraform/sg.tf
# Security Groups
resource "aws_security_group" "alb_sg" {
  vpc_id      = aws_vpc.app_vpc.id
  description = "ALB Security Group"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "MicroservicesALBSG"
  }
}

resource "aws_security_group" "ecs_sg" {
  vpc_id      = aws_vpc.app_vpc.id
  description = "ECS Fargate Security Group"
  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }
  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "ECSSG"
  }
}
